--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "components": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "styled": "^1.0.0"
+    "styled-components": "^6.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.2",
