--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "styled-components": "^6.0.3"
+    "react-router-dom": "^6.14.1",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.2",
