--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.2",
