--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -23,7 +23,7 @@
     "no-trailing-spaces": "error",
     "prefer-const": "error",
     "space-before-blocks": "error",
-    "no-multiple-empty-lines": ["error", { "max": 1 }],
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
     "eol-last": "error",
     "max-len": ["error", 99],
     "key-spacing": ["error", { "afterColon": true }],
