--- a/back-end/.eslintrc
+++ b/back-end/.eslintrc
@@ -4,9 +4,26 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  "rules": {}
+  "rules": {
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "object-curly-spacing": ["error", "always"],
+    "comma-dangle": ["error", "always-multiline"],
+    "no-console": "error",
+    "no-multi-spaces": "error",
+    "no-trailing-spaces": "error",
+    "prefer-const": "error",
+    "space-before-blocks": "error",
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+    "eol-last": "error",
+    "max-len": ["error", 100],
+    "key-spacing": ["error", { "afterColon": true }],
+    "comma-spacing": ["error", { "after": true }]
+  }
 }
