--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,6 @@
   },
   "devDependencies": {
     "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.0"
+    "nodemon": "^3.0.1"
   }
 }
