backend attUserData route finished

--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -27,6 +27,7 @@
     "eol-last": "error",
     "max-len": ["error", 99],
     "key-spacing": ["error", { "afterColon": true }],
-    "comma-spacing": ["error", { "after": true }]
+    "comma-spacing": ["error", { "after": true }],
+    "space-in-parens": "error"
   }
 }
